fixes text-area search problem on FireFox

--- a/src/styles/search/_TextAreaSearch.scss
+++ b/src/styles/search/_TextAreaSearch.scss
@@ -9,6 +9,7 @@
   font-family: "Courier New", monospace;
   font-size: 1rem;
   resize: none;
+  white-space: pre-wrap;
 }
 
 
